Make some menu margins consistent across platforms

Bug: 850080
Change-Id: Iec8fdc70bb943fa153a4ffbacadda9ea3478370e
Reviewed-on: https://chromium-review.googlesource.com/1088755
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564988}
Former-commit-id: c10b81789243f16cebc8bab58f52a80dc216530b